Fixed huge gap on mobile

--- a/src/styles/components/storeProducts.scss
+++ b/src/styles/components/storeProducts.scss
@@ -7,7 +7,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin: 20px 0;
-    align-items: baseline;
     column-gap: 50px;
     row-gap: 2px;
   }
